# agent-codegen

./: .env.example  .gitignore  AGENTS.md  README.md  codegen.toml  progress.md  pyproject.toml
.cursor/rules/: codegen-workspace.mdc
docs/: codegen_requirements.md  codegen_stories.md  mcp-howto.md
src/codegen/: __init__.py  __main__.py  agent_loop.py  bootstrap.py  cli.py  command_policy.py  config.py  console.py  gitignore_filter.py  history_compaction.py  http_env.py  mcp_runtime.py  observability.py  rules.py  session_audit.py  session_persist.py  tool_dispatch.py  tools_patch.py  tools_readonly.py  tools_terminal.py  tools_web.py  verification_hooks.py  workspace.py  workspace_paths.py
tests/: test_agent_loop.py  test_bootstrap.py  test_cli.py  test_command_policy.py  test_config.py  test_console.py  test_history_compaction.py  test_http_env.py  test_mcp.py  test_observability.py  test_rules.py  test_session_audit.py  test_session_persist.py  test_tools_patch.py  test_tools_readonly.py  test_tools_terminal_policy.py  test_tools_web.py  test_verification_hooks.py  test_workspace.py  test_workspace_paths.py
